// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`AIAgent.invoke with streaming true 1`] = `
[
  {
    "progress": {
      "event": "message",
      "message": {
        "content": [
          {
            "text": "write a long blog about arcblock",
            "type": "text",
          },
        ],
        "role": "user",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "Here",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "is",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "a",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "beautiful",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "T",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "-",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "shirt",
      },
    },
  },
  {
    "progress": {
      "event": "message",
      "message": {
        "content": [
          {
            "text": "Here is a beautiful T-shirt",
            "type": "text",
          },
        ],
        "role": "agent",
      },
    },
  },
  {
    "delta": {
      "json": {
        "message": "Here is a beautiful T-shirt",
      },
    },
  },
]
`;

exports[`AIAgent.invoke with streaming false 1`] = `
{
  "message": "Here is a beautiful T-shirt",
}
`;

exports[`AIAgent with router toolChoice should return router result with streaming true 1`] = `
[
  {
    "delta": {
      "text": {
        "message": "Here",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "is",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "a",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "beautiful",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": " ",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "T",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "-",
      },
    },
  },
  {
    "delta": {
      "text": {
        "message": "shirt",
      },
    },
  },
  {
    "progress": {
      "event": "message",
      "message": {
        "content": [
          {
            "text": "Here is a beautiful T-shirt",
            "type": "text",
          },
        ],
        "role": "agent",
      },
    },
  },
  {
    "delta": {
      "json": {
        "message": "Here is a beautiful T-shirt",
      },
    },
  },
]
`;

exports[`AIAgent with router toolChoice should return router result with streaming false 1`] = `
{
  "message": "Here is a beautiful T-shirt",
}
`;
